# detect

./: .dockerignore  .flake8  .gitignore  .simple.env  Dockerfile  README.md  conftest.py  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
config/: settings.py  urls.py
core/: models.py  serializers.py  tasks.py  views.py
core/migrations/: 0001_initial.py  0002_image_is_translated.py
core/services/: image_overlay_service.py  ocr_service.py  translation_service.py
tests/: test_core.py
users/: models.py  serializers.py  views.py
users/migrations/: 0001_initial.py
